# crest

./: LISCENSE  LISCENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
crest/: api.py  app.py  cli.py  pages.py  server.py  templates.py
crest/apps/: __init__.py
crest/cli/: manager.py
crest/cli/commands/: __init__.py  createapp.py  startserver.py
crest/db/: __init__.py  schema.py
crest/pages/: __init__.py  dynamic.py
crest/resources/: placeholder.html
crest/resources/app_template/: api.py  app.py  pages.py
crest/resources/app_template/pages/: example.py
crest/resources/app_template/templates/: placeholder.html
crest/resources/error_pages/templates/: 404.html  error.html
crest/servers/: devserver.py
docs/intro/: getting_started.md  understanding_structure.md
docs/references/: App.md
docs/references/pages/: DynamicPage.md  Page.md  PageWithProps.md  QueriedPage.md
docs/references/templates/: Custom error templates.md  Templates.md
sample_project/: api.py  app.py  pages.py
sample_project/pages/: dynamic_example.py  example.py
sample_project/pages/templates/: example.html
sample_project/templates/: dynamic.html  example.html
tests/: test_cli.py
