[build-system]
requires = ["setuptools>=61.0", "typer>=0.7.0", "rich"]
build-backend = "setuptools.build_meta"

[project]
name = "crest"
version = "1.0.0"
authors = [
  { name="William Herring", email="william.herring.au@gmail.com" },
]
description = "A web framework designed for simplicity and efficiency"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Programming Language :: Python :: 3',
]

[project.urls]
"Homepage" = "https://github.com/william-herring/crest"